[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/images/challenger-card-9-patch.png" type="Texture" id=1]
[ext_resource path="res://menus/default_theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/images/difficulty-star.png" type="Texture" id=3]
[ext_resource path="res://assets/images/diver.png" type="Texture" id=4]
[ext_resource path="res://menus/CompetitorCard.gd" type="Script" id=5]
[ext_resource path="res://menus/BaseButton.tscn" type="PackedScene" id=6]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 15, 15 )
margin_left = 5.0
margin_right = 5.0
margin_top = 5.0
margin_bottom = 5.0
expand_margin_left = 10.0
expand_margin_right = 10.0
expand_margin_top = 10.0
expand_margin_bottom = 10.0

[node name="CompetitorCard" type="PanelContainer"]
margin_left = 31.0
margin_top = 17.0
margin_right = 257.0
margin_bottom = 131.0
theme = ExtResource( 2 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 221.0
margin_bottom = 109.0
custom_constants/separation = 16

[node name="CardDataWrap" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 216.0
margin_bottom = 64.0
custom_constants/separation = 20

[node name="DataWrap" type="VBoxContainer" parent="VBoxContainer/CardDataWrap"]
margin_right = 160.0
margin_bottom = 64.0
rect_min_size = Vector2( 160, 0 )
custom_constants/separation = 16

[node name="DescriptionWrap" type="VBoxContainer" parent="VBoxContainer/CardDataWrap/DataWrap"]
margin_right = 160.0
margin_bottom = 24.0
custom_constants/separation = 8

[node name="NameLabel" type="Label" parent="VBoxContainer/CardDataWrap/DataWrap/DescriptionWrap"]
margin_right = 160.0
margin_bottom = 8.0
text = "Nick"

[node name="FlavorLabel" type="Label" parent="VBoxContainer/CardDataWrap/DataWrap/DescriptionWrap"]
margin_top = 16.0
margin_right = 160.0
margin_bottom = 24.0
rect_min_size = Vector2( 100, 0 )
text = "Thinks he's so cool"
autowrap = true

[node name="DifficultyWrap" type="VBoxContainer" parent="VBoxContainer/CardDataWrap/DataWrap"]
margin_top = 40.0
margin_right = 160.0
margin_bottom = 64.0
custom_constants/separation = 8

[node name="DifficultyLabel" type="Label" parent="VBoxContainer/CardDataWrap/DataWrap/DifficultyWrap"]
margin_right = 160.0
margin_bottom = 8.0
text = "Difficulty:"

[node name="DifficultyImageWrap" type="HBoxContainer" parent="VBoxContainer/CardDataWrap/DataWrap/DifficultyWrap"]
margin_top = 16.0
margin_right = 160.0
margin_bottom = 24.0

[node name="DifficultyImage" type="TextureRect" parent="VBoxContainer/CardDataWrap/DataWrap/DifficultyWrap/DifficultyImageWrap"]
margin_right = 20.0
margin_bottom = 8.0
rect_min_size = Vector2( 20, 8 )
size_flags_horizontal = 0
texture = ExtResource( 3 )
stretch_mode = 2

[node name="ImageWrap" type="VBoxContainer" parent="VBoxContainer/CardDataWrap"]
margin_left = 180.0
margin_right = 216.0
margin_bottom = 64.0
alignment = 1

[node name="DiverImage" type="TextureRect" parent="VBoxContainer/CardDataWrap/ImageWrap"]
margin_top = 14.0
margin_right = 36.0
margin_bottom = 50.0
rect_min_size = Vector2( 36, 36 )
size_flags_vertical = 4
texture = ExtResource( 4 )
expand = true
stretch_mode = 2
flip_h = true

[node name="ButtonWrap" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 80.0
margin_right = 216.0
margin_bottom = 104.0
custom_constants/separation = 8

[node name="ChallengeButton" parent="VBoxContainer/ButtonWrap" instance=ExtResource( 6 )]
margin_left = 0.0
margin_right = 100.0
margin_bottom = 24.0
size_flags_horizontal = 4
text = "Challenge"

[node name="MainMenuButton" parent="VBoxContainer/ButtonWrap" instance=ExtResource( 6 )]
margin_left = 108.0
margin_right = 208.0
margin_bottom = 24.0
focus_mode = 2
size_flags_horizontal = 4
text = "Main Menu"
